[gd_scene load_steps=5 format=3 uid="uid://c1c8ks4aii8ip"]

[ext_resource type="Theme" uid="uid://dyhjmh1vxjsi1" path="res://Content/main_theme.tres" id="1_ak2if"]
[ext_resource type="Script" uid="uid://dmb03w2aph6v0" path="res://Source/UI/title_screen.gd" id="1_v6p8y"]
[ext_resource type="PackedScene" uid="uid://bwmfa211x63wn" path="res://Scenes/Objects/notifications.tscn" id="3_4gxqj"]

[sub_resource type="LabelSettings" id="LabelSettings_v6p8y"]
font_size = 78

[node name="MainScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ak2if")
script = ExtResource("1_v6p8y")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.815686, 0.835294, 0.890196, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.15
anchor_right = 0.5
anchor_bottom = 0.15
grow_horizontal = 2
theme = ExtResource("1_ak2if")
text = "Social Hangout App"
label_settings = SubResource("LabelSettings_v6p8y")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -64.0
offset_right = 128.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ak2if")
text = "Start"
metadata/_edit_use_anchors_ = true

[node name="CreditsButton" type="Button" parent="."]
custom_minimum_size = Vector2(96, 48)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
text = "Credits"

[node name="AuthPanel" type="Control" parent="."]
visible = false
layout_mode = 1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2

[node name="SignIn" type="Control" parent="AuthPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Username" type="LineEdit" parent="AuthPanel/SignIn"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0231481
anchor_top = 0.1
anchor_right = 0.976563
anchor_bottom = 0.264609
tooltip_text = "The name that will be used to log into the website"
theme = ExtResource("1_ak2if")
placeholder_text = "Username"
metadata/_edit_use_anchors_ = true

[node name="Password" type="LineEdit" parent="AuthPanel/SignIn"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0231481
anchor_top = 0.305761
anchor_right = 0.976563
anchor_bottom = 0.47037
tooltip_text = "The name that will be used to log into the website"
theme = ExtResource("1_ak2if")
placeholder_text = "Password"
secret = true
metadata/_edit_use_anchors_ = true

[node name="ConfirmSignIn" type="Button" parent="AuthPanel/SignIn"]
custom_minimum_size = Vector2(256, 72)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
text = "Sign In"

[node name="ShowSignUp" type="Button" parent="AuthPanel/SignIn"]
custom_minimum_size = Vector2(196, 52)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "No Account?
Click here to Sign Up!"

[node name="PANEL_LABEL" type="Label" parent="AuthPanel/SignIn"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ak2if")
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.588235)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 8
text = "Signing In"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SignUp" type="Control" parent="AuthPanel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Username" type="LineEdit" parent="AuthPanel/SignUp"]
layout_mode = 2
anchor_left = 0.0231481
anchor_top = 0.1
anchor_right = 0.976563
anchor_bottom = 0.264609
tooltip_text = "The name that will be used to log into the website"
theme = ExtResource("1_ak2if")
placeholder_text = "Username"
metadata/_edit_use_anchors_ = true

[node name="Password" type="LineEdit" parent="AuthPanel/SignUp"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0231481
anchor_top = 0.305761
anchor_right = 0.976563
anchor_bottom = 0.47037
tooltip_text = "The name that will be used to log into the website"
theme = ExtResource("1_ak2if")
placeholder_text = "Password"
secret = true
metadata/_edit_use_anchors_ = true

[node name="PasswordConfirm" type="LineEdit" parent="AuthPanel/SignUp"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0231481
anchor_top = 0.502572
anchor_right = 0.976563
anchor_bottom = 0.667181
tooltip_text = "The name that will be used to log into the website"
theme = ExtResource("1_ak2if")
placeholder_text = "Confirm Password"
secret = true
metadata/_edit_use_anchors_ = true

[node name="ConfirmSignUp" type="Button" parent="AuthPanel/SignUp"]
custom_minimum_size = Vector2(256, 72)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -104.0
offset_right = 128.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
text = "Sign Up"

[node name="ShowSignIn" type="Button" parent="AuthPanel/SignUp"]
custom_minimum_size = Vector2(196, 52)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -204.0
offset_top = -62.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "Have an account?
Sign In Here."
autowrap_mode = 2

[node name="PANEL_LABEL" type="Label" parent="AuthPanel/SignUp"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ak2if")
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.588235)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 8
text = "Creating an account"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="AuthPanel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_ak2if")

[node name="Notifications" parent="." instance=ExtResource("3_4gxqj")]
layout_mode = 1

[node name="Credits" type="Control" parent="."]
visible = false
layout_mode = 1
anchor_left = 0.0503472
anchor_top = 0.0632716
anchor_right = 0.949653
anchor_bottom = 0.936728
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="Credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Credits"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_top = 16.0
grow_horizontal = 2
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 64
text = "CREDITS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="Credits"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -355.0
offset_top = 124.0
offset_right = 355.0
grow_horizontal = 2

[node name="Credit1" type="Label" parent="Credits"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_top = 128.0
offset_right = -8.0
grow_horizontal = 0
text = "Assets from 'Sprout Lands' by Cup Nooble"
horizontal_alignment = 2

[node name="Credit1Link" type="LinkButton" parent="Credits"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = 8.0
offset_top = 128.0
text = "https://cupnooble.itch.io/"
uri = "https://cupnooble.itch.io/"

[node name="HideCredits" type="Button" parent="Credits"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
text = "X"

[connection signal="pressed" from="PlayButton" to="." method="start_playing"]
[connection signal="pressed" from="CreditsButton" to="Credits" method="show"]
[connection signal="text_submitted" from="AuthPanel/SignIn/Username" to="." method="start_sign_in"]
[connection signal="text_submitted" from="AuthPanel/SignIn/Password" to="." method="start_sign_in"]
[connection signal="pressed" from="AuthPanel/SignIn/ConfirmSignIn" to="." method="start_sign_in"]
[connection signal="pressed" from="AuthPanel/SignIn/ShowSignUp" to="." method="_show_sign_up"]
[connection signal="text_submitted" from="AuthPanel/SignUp/Username" to="." method="start_sign_up"]
[connection signal="text_submitted" from="AuthPanel/SignUp/Password" to="." method="start_sign_up"]
[connection signal="text_submitted" from="AuthPanel/SignUp/PasswordConfirm" to="." method="start_sign_up"]
[connection signal="pressed" from="AuthPanel/SignUp/ConfirmSignUp" to="." method="start_sign_up"]
[connection signal="pressed" from="AuthPanel/SignUp/ShowSignIn" to="." method="_show_sign_in"]
[connection signal="pressed" from="Credits/HideCredits" to="Credits" method="hide"]
